// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal center option can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.333333333333336%;
        height: 33.333333333333336%;
        transform: translateX(183.92857142857147%) translateY(87.49999999999997%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.166666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.166666666666667,
      \\"e\\":30.654761904761912,
      \\"f\\":14.583333333333329
    }",
    "points": Array [
      Object {
        "x": 30.654761904761926,
        "y": 14.583333333333343,
      },
      Object {
        "x": 51.48809523809525,
        "y": 14.583333333333343,
      },
      Object {
        "x": 41.0714285714286,
        "y": 35.416666666666664,
      },
    ],
    "rotate": -0,
    "scale": 4.166666666666667,
    "svgTransform": "matrix(4.166666666666667,0,0,4.166666666666667,30.654761904761912,14.583333333333329)",
    "translateX": 30.654761904761912,
    "translateY": 14.583333333333329,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 23.80952380952381%;
        height: 23.80952380952381%;
        transform: translateX(152.4999999999998%) translateY(167.49999999999977%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.9761904761904763,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.9761904761904763,
      \\"e\\":18.154761904761884,
      \\"f\\":19.94047619047616
    }",
    "points": Array [
      Object {
        "x": 18.154761904761905,
        "y": 19.94047619047616,
      },
      Object {
        "x": 33.03571428571426,
        "y": 19.94047619047616,
      },
      Object {
        "x": 33.03571428571426,
        "y": 34.82142857142852,
      },
      Object {
        "x": 18.154761904761905,
        "y": 34.82142857142852,
      },
    ],
    "rotate": -0,
    "scale": 2.9761904761904763,
    "svgTransform": "matrix(2.9761904761904763,0,0,2.9761904761904763,18.154761904761884,19.94047619047616)",
    "translateX": 18.154761904761884,
    "translateY": 19.94047619047616,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 41.66666666666667%;
        height: 33.333333333333336%;
        transform: translateX(-7.142857142857155%) translateY(87.49999999999997%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.166666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.166666666666667,
      \\"e\\":-1.4880952380952408,
      \\"f\\":14.583333333333329
    }",
    "points": Array [
      Object {
        "x": -1.488095238095263,
        "y": 14.583333333333343,
      },
      Object {
        "x": 19.34523809523807,
        "y": 14.583333333333343,
      },
      Object {
        "x": 8.928571428571404,
        "y": 35.416666666666664,
      },
    ],
    "rotate": -0,
    "scale": 4.166666666666667,
    "svgTransform": "matrix(4.166666666666667,0,0,4.166666666666667,-1.4880952380952408,14.583333333333329)",
    "translateX": -1.4880952380952408,
    "translateY": 14.583333333333329,
  },
]
`;

exports[`packAnimal it works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 41.66666666666667%;
        height: 33.333333333333336%;
        transform: translateX(147.14285714285717%) translateY(87.50000000000003%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.166666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.166666666666667,
      \\"e\\":30.65476190476191,
      \\"f\\":14.58333333333334
    }",
    "points": Array [
      Object {
        "x": 30.65476190476191,
        "y": 14.58333333333334,
      },
      Object {
        "x": 51.48809523809525,
        "y": 14.58333333333334,
      },
      Object {
        "x": 41.07142857142857,
        "y": 35.41666666666666,
      },
    ],
    "rotate": -0,
    "scale": 4.166666666666667,
    "svgTransform": "matrix(4.166666666666667,0,0,4.166666666666667,30.65476190476191,14.58333333333334)",
    "translateX": 30.65476190476191,
    "translateY": 14.58333333333334,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 23.80952380952381%;
        height: 23.80952380952381%;
        transform: translateX(152.50000000000009%) translateY(167.49999999999997%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.9761904761904763,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.9761904761904763,
      \\"e\\":18.154761904761916,
      \\"f\\":19.940476190476186
    }",
    "points": Array [
      Object {
        "x": 18.154761904761948,
        "y": 19.9404761904762,
      },
      Object {
        "x": 33.03571428571429,
        "y": 19.9404761904762,
      },
      Object {
        "x": 33.03571428571429,
        "y": 34.82142857142857,
      },
      Object {
        "x": 18.154761904761948,
        "y": 34.82142857142857,
      },
    ],
    "rotate": -0,
    "scale": 2.9761904761904763,
    "svgTransform": "matrix(2.9761904761904763,0,0,2.9761904761904763,18.154761904761916,19.940476190476186)",
    "translateX": 18.154761904761916,
    "translateY": 19.940476190476186,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.333333333333336%;
        height: 33.333333333333336%;
        transform: translateX(-8.928571428571423%) translateY(87.50000000000003%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.166666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.166666666666667,
      \\"e\\":-1.4880952380952372,
      \\"f\\":14.58333333333334
    }",
    "points": Array [
      Object {
        "x": -1.4880952380952517,
        "y": 14.58333333333334,
      },
      Object {
        "x": 19.34523809523808,
        "y": 14.58333333333334,
      },
      Object {
        "x": 8.9285714285714,
        "y": 35.41666666666666,
      },
    ],
    "rotate": -0,
    "scale": 4.166666666666667,
    "svgTransform": "matrix(4.166666666666667,0,0,4.166666666666667,-1.4880952380952372,14.58333333333334)",
    "translateX": -1.4880952380952372,
    "translateY": 14.58333333333334,
  },
]
`;

exports[`packAnimal it works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 100%;
        height: 100%;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":10,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":10,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 50,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 10,
    "svgTransform": "matrix(10,0,0,10,0,0)",
    "translateX": 0,
    "translateY": 0,
  },
]
`;

exports[`packAnimal jitter option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 8.334737917238106%;
        height: 6.667790333790485%;
        transform: translateX(205.40456149570673%) translateY(1375.6514500879125%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8334737917238106,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8334737917238106,
      \\"e\\":8.559965935359667,
      \\"f\\":45.86277720780524
    }",
    "points": Array [
      Object {
        "x": 8.559965935359667,
        "y": 45.86277720780524,
      },
      Object {
        "x": 12.727334893978721,
        "y": 45.86277720780524,
      },
      Object {
        "x": 10.643650414669194,
        "y": 50.03014616642429,
      },
    ],
    "rotate": -0,
    "scale": 0.8334737917238106,
    "svgTransform": "matrix(0.8334737917238106,0,0,0.8334737917238106,8.559965935359667,45.86277720780524)",
    "translateX": 8.559965935359667,
    "translateY": 45.86277720780524,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 5.558512985746386%;
        height: 5.558512985746386%;
        transform: translateX(1262.2113355122183%) translateY(1120.836325016895%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.6948141232182983,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.6948141232182983,
      \\"e\\":35.08009049600477,
      \\"f\\":31.150916337513337
    }",
    "points": Array [
      Object {
        "x": 35.08009049600478,
        "y": 31.15091633751334,
      },
      Object {
        "x": 38.55416111209626,
        "y": 31.15091633751334,
      },
      Object {
        "x": 38.55416111209626,
        "y": 34.624986953604825,
      },
      Object {
        "x": 35.08009049600478,
        "y": 34.624986953604825,
      },
    ],
    "rotate": -0,
    "scale": 0.6948141232182983,
    "svgTransform": "matrix(0.6948141232182983,0,0,0.6948141232182983,35.08009049600477,31.150916337513337)",
    "translateX": 35.08009049600477,
    "translateY": 31.150916337513337,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 9.85930018760364%;
        height: 7.887440150082912%;
        transform: translateX(740.6283057847043%) translateY(-0.7644093863322948%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9859300187603641,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9859300187603641,
      \\"e\\":36.510383970838504,
      \\"f\\":-0.030146166424287912
    }",
    "points": Array [
      Object {
        "x": 36.51038397083851,
        "y": -0.030146166424287038,
      },
      Object {
        "x": 41.44003406464033,
        "y": -0.030146166424287038,
      },
      Object {
        "x": 38.97520901773942,
        "y": 4.899503927377532,
      },
    ],
    "rotate": -0,
    "scale": 0.9859300187603641,
    "svgTransform": "matrix(0.9859300187603641,0,0,0.9859300187603641,36.510383970838504,-0.030146166424287912)",
    "translateX": 36.510383970838504,
    "translateY": -0.030146166424287912,
  },
]
`;

exports[`packAnimal jitter option works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 44.871794871794876%;
        height: 35.8974358974359%;
        transform: translateX(127.72602611190094%) translateY(94.20406190169743%) rotate(-11.431793626397862deg)
      ",
    "matrix": "{
      \\"a\\":4.398159872271812,
      \\"b\\":-0.8893646541786796,
      \\"c\\":0.8893646541786796,
      \\"d\\":4.398159872271812,
      \\"e\\":28.656480217413673,
      \\"f\\":16.908421366971332
    }",
    "points": Array [
      Object {
        "x": 28.656480217413677,
        "y": 16.908421366971346,
      },
      Object {
        "x": 50.64727957877274,
        "y": 12.461598096077934,
      },
      Object {
        "x": 44.098703168986596,
        "y": 36.67580909288368,
      },
    ],
    "rotate": -11.431793626397862,
    "scale": 4.487179487179487,
    "svgTransform": "matrix(4.398159872271812,-0.8893646541786796,0.8893646541786796,4.398159872271812,28.656480217413673,16.908421366971332)",
    "translateX": 28.656480217413673,
    "translateY": 16.908421366971332,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 25.641025641025646%;
        height: 25.641025641025646%;
        transform: translateX(150.7537507387105%) translateY(160.6483839395912%) rotate(3.379440028220437deg)
      ",
    "matrix": "{
      \\"a\\":3.199554631748704,
      \\"b\\":0.18893641725131832,
      \\"c\\":-0.18893641725131832,
      \\"d\\":3.199554631748704,
      \\"e\\":19.32740394086032,
      \\"f\\":20.595946658921953
    }",
    "points": Array [
      Object {
        "x": 19.327403940860354,
        "y": 20.595946658921967,
      },
      Object {
        "x": 35.32517709960385,
        "y": 21.540628745178555,
      },
      Object {
        "x": 34.38049501334726,
        "y": 37.53840190392206,
      },
      Object {
        "x": 18.38272185460378,
        "y": 36.593719817665466,
      },
    ],
    "rotate": 3.379440028220437,
    "scale": 3.2051282051282053,
    "svgTransform": "matrix(3.199554631748704,0.18893641725131832,-0.18893641725131832,3.199554631748704,19.32740394086032,20.595946658921953)",
    "translateX": 19.32740394086032,
    "translateY": 20.595946658921953,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 44.871794871794876%;
        height: 35.8974358974359%;
        transform: translateX(-2.885017551101241%) translateY(78.24266952080964%) rotate(4.779674643650617deg)
      ",
    "matrix": "{
      \\"a\\":4.471575234328691,
      \\"b\\":0.37389125946280205,
      \\"c\\":-0.37389125946280205,
      \\"d\\":4.471575234328691,
      \\"e\\":-0.6472795787727144,
      \\"f\\":14.043556067837628
    }",
    "points": Array [
      Object {
        "x": -0.6472795787727305,
        "y": 14.043556067837626,
      },
      Object {
        "x": 21.710596592870726,
        "y": 15.913012365151637,
      },
      Object {
        "x": 8.662202209734975,
        "y": 37.33616038813807,
      },
    ],
    "rotate": 4.779674643650617,
    "scale": 4.487179487179487,
    "svgTransform": "matrix(4.471575234328691,0.37389125946280205,-0.37389125946280205,4.471575234328691,-0.6472795787727144,14.043556067837628)",
    "translateX": -0.6472795787727144,
    "translateY": 14.043556067837628,
  },
]
`;

exports[`packAnimal margin option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 23.333333333333336%;
        height: 29.166666666666675%;
        transform: translateX(312.5000000000001%) translateY(121.42857142857153%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.916666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.916666666666667,
      \\"e\\":36.45833333333335,
      \\"f\\":17.70833333333335
    }",
    "points": Array [
      Object {
        "x": 36.45833333333335,
        "y": 17.708333333333325,
      },
      Object {
        "x": 51.04166666666668,
        "y": 17.708333333333325,
      },
      Object {
        "x": 43.750000000000014,
        "y": 32.29166666666666,
      },
    ],
    "rotate": -0,
    "scale": 2.916666666666667,
    "svgTransform": "matrix(2.916666666666667,0,0,2.916666666666667,36.45833333333335,17.70833333333335)",
    "translateX": 36.45833333333335,
    "translateY": 17.70833333333335,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 13.888888888888893%;
        height: 13.888888888888893%;
        transform: translateX(307.5000000000002%) translateY(337.50000000000006%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.7361111111111114,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.7361111111111114,
      \\"e\\":21.354166666666686,
      \\"f\\":23.437500000000007
    }",
    "points": Array [
      Object {
        "x": 21.354166666666703,
        "y": 23.437500000000014,
      },
      Object {
        "x": 30.03472222222224,
        "y": 23.437500000000014,
      },
      Object {
        "x": 30.03472222222224,
        "y": 32.11805555555556,
      },
      Object {
        "x": 21.354166666666703,
        "y": 32.11805555555556,
      },
    ],
    "rotate": -0,
    "scale": 1.7361111111111114,
    "svgTransform": "matrix(1.7361111111111114,0,0,1.7361111111111114,21.354166666666686,23.437500000000007)",
    "translateX": 21.354166666666686,
    "translateY": 23.437500000000007,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 29.166666666666675%;
        height: 29.166666666666675%;
        transform: translateX(-7.142857142857174%) translateY(121.42857142857153%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.916666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.916666666666667,
      \\"e\\":-1.0416666666666714,
      \\"f\\":17.70833333333335
    }",
    "points": Array [
      Object {
        "x": -1.0416666666666818,
        "y": 17.708333333333325,
      },
      Object {
        "x": 13.541666666666654,
        "y": 17.708333333333325,
      },
      Object {
        "x": 6.249999999999986,
        "y": 32.29166666666666,
      },
    ],
    "rotate": -0,
    "scale": 2.916666666666667,
    "svgTransform": "matrix(2.916666666666667,0,0,2.916666666666667,-1.0416666666666714,17.70833333333335)",
    "translateX": -1.0416666666666714,
    "translateY": 17.70833333333335,
  },
]
`;

exports[`packAnimal maximizing can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666668%;
        height: 11.666666666666668%;
        transform: translateX(452.85714285714283%) translateY(375.7142857142857%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":26.416666666666668,
      \\"f\\":21.916666666666668
    }",
    "points": Array [
      Object {
        "x": 26.416666666666668,
        "y": 21.916666666666668,
      },
      Object {
        "x": 32.25,
        "y": 21.916666666666668,
      },
      Object {
        "x": 29.333333333333336,
        "y": 27.75,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,26.416666666666668,21.916666666666668)",
    "translateX": 26.416666666666668,
    "translateY": 21.916666666666668,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 6.666666666666667%;
        height: 6.666666666666667%;
        transform: translateX(687.5%) translateY(702.5%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8333333333333334,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8333333333333334,
      \\"e\\":22.916666666666668,
      \\"f\\":23.416666666666668
    }",
    "points": Array [
      Object {
        "x": 22.916666666666675,
        "y": 23.416666666666668,
      },
      Object {
        "x": 27.083333333333336,
        "y": 23.416666666666668,
      },
      Object {
        "x": 27.083333333333336,
        "y": 27.58333333333333,
      },
      Object {
        "x": 22.916666666666675,
        "y": 27.58333333333333,
      },
    ],
    "rotate": -0,
    "scale": 0.8333333333333334,
    "svgTransform": "matrix(0.8333333333333334,0,0,0.8333333333333334,22.916666666666668,23.416666666666668)",
    "translateX": 22.916666666666668,
    "translateY": 23.416666666666668,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666668%;
        height: 11.666666666666668%;
        transform: translateX(298.57142857142856%) translateY(375.7142857142857%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":17.416666666666668,
      \\"f\\":21.916666666666668
    }",
    "points": Array [
      Object {
        "x": 17.416666666666664,
        "y": 21.916666666666668,
      },
      Object {
        "x": 23.249999999999996,
        "y": 21.916666666666668,
      },
      Object {
        "x": 20.33333333333333,
        "y": 27.75,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,17.416666666666668,21.916666666666668)",
    "translateX": 17.416666666666668,
    "translateY": 21.916666666666668,
  },
]
`;

exports[`packAnimal postPackPolygonScale option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 37.50000000000001%;
        height: 30.000000000000004%;
        transform: translateX(169.04761904761904%) translateY(104.1666666666667%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.7500000000000004,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.7500000000000004,
      \\"e\\":31.696428571428573,
      \\"f\\":15.625000000000007
    }",
    "points": Array [
      Object {
        "x": 31.69642857142858,
        "y": 15.625000000000007,
      },
      Object {
        "x": 50.446428571428584,
        "y": 15.625000000000007,
      },
      Object {
        "x": 41.071428571428584,
        "y": 34.37499999999999,
      },
    ],
    "rotate": -0,
    "scale": 3.7500000000000004,
    "svgTransform": "matrix(3.7500000000000004,0,0,3.7500000000000004,31.696428571428573,15.625000000000007)",
    "translateX": 31.696428571428573,
    "translateY": 15.625000000000007,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 21.42857142857143%;
        height: 21.42857142857143%;
        transform: translateX(176.38888888888906%) translateY(193.05555555555546%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.678571428571429,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.678571428571429,
      \\"e\\":18.898809523809543,
      \\"f\\":20.684523809523803
    }",
    "points": Array [
      Object {
        "x": 18.89880952380956,
        "y": 20.684523809523814,
      },
      Object {
        "x": 32.29166666666668,
        "y": 20.684523809523814,
      },
      Object {
        "x": 32.29166666666668,
        "y": 34.07738095238093,
      },
      Object {
        "x": 18.89880952380956,
        "y": 34.07738095238093,
      },
    ],
    "rotate": -0,
    "scale": 2.678571428571429,
    "svgTransform": "matrix(2.678571428571429,0,0,2.678571428571429,18.898809523809543,20.684523809523803)",
    "translateX": 18.898809523809543,
    "translateY": 20.684523809523803,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 37.50000000000001%;
        height: 30.000000000000004%;
        transform: translateX(-2.3809523809523885%) translateY(104.1666666666667%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.7500000000000004,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.7500000000000004,
      \\"e\\":-0.44642857142857295,
      \\"f\\":15.625000000000007
    }",
    "points": Array [
      Object {
        "x": -0.44642857142858605,
        "y": 15.625000000000007,
      },
      Object {
        "x": 18.303571428571416,
        "y": 15.625000000000007,
      },
      Object {
        "x": 8.928571428571402,
        "y": 34.37499999999999,
      },
    ],
    "rotate": -0,
    "scale": 3.7500000000000004,
    "svgTransform": "matrix(3.7500000000000004,0,0,3.7500000000000004,-0.44642857142857295,15.625000000000007)",
    "translateX": -0.44642857142857295,
    "translateY": 15.625000000000007,
  },
]
`;

exports[`packAnimal rotation can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 41.66666666666667%;
        height: 33.333333333333336%;
        transform: translateX(147.14285714285717%) translateY(87.50000000000003%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.166666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.166666666666667,
      \\"e\\":30.65476190476191,
      \\"f\\":14.58333333333334
    }",
    "points": Array [
      Object {
        "x": 30.65476190476191,
        "y": 14.58333333333334,
      },
      Object {
        "x": 51.48809523809525,
        "y": 14.58333333333334,
      },
      Object {
        "x": 41.07142857142857,
        "y": 35.41666666666666,
      },
    ],
    "rotate": -0,
    "scale": 4.166666666666667,
    "svgTransform": "matrix(4.166666666666667,0,0,4.166666666666667,30.65476190476191,14.58333333333334)",
    "translateX": 30.65476190476191,
    "translateY": 14.58333333333334,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 23.80952380952381%;
        height: 23.80952380952381%;
        transform: translateX(152.50000000000009%) translateY(167.49999999999997%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.9761904761904763,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.9761904761904763,
      \\"e\\":18.154761904761916,
      \\"f\\":19.940476190476186
    }",
    "points": Array [
      Object {
        "x": 18.154761904761948,
        "y": 19.9404761904762,
      },
      Object {
        "x": 33.03571428571429,
        "y": 19.9404761904762,
      },
      Object {
        "x": 33.03571428571429,
        "y": 34.82142857142857,
      },
      Object {
        "x": 18.154761904761948,
        "y": 34.82142857142857,
      },
    ],
    "rotate": -0,
    "scale": 2.9761904761904763,
    "svgTransform": "matrix(2.9761904761904763,0,0,2.9761904761904763,18.154761904761916,19.940476190476186)",
    "translateX": 18.154761904761916,
    "translateY": 19.940476190476186,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.333333333333336%;
        height: 33.333333333333336%;
        transform: translateX(-8.928571428571423%) translateY(87.50000000000003%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.166666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.166666666666667,
      \\"e\\":-1.4880952380952372,
      \\"f\\":14.58333333333334
    }",
    "points": Array [
      Object {
        "x": -1.4880952380952517,
        "y": 14.58333333333334,
      },
      Object {
        "x": 19.34523809523808,
        "y": 14.58333333333334,
      },
      Object {
        "x": 8.9285714285714,
        "y": 35.41666666666666,
      },
    ],
    "rotate": -0,
    "scale": 4.166666666666667,
    "svgTransform": "matrix(4.166666666666667,0,0,4.166666666666667,-1.4880952380952372,14.58333333333334)",
    "translateX": -1.4880952380952372,
    "translateY": 14.58333333333334,
  },
]
`;
